Redesigned the wild pyromaniac face (based off madman face)
monster/humanoid/pyromaniac.base.111.png
monster/humanoid/pyromaniac.base.112.png
monster/humanoid/pyromaniac.base.113.png
monster/humanoid/pyromaniac.base.114.png
SilverNexus 2014-05-06

Fix name for flying ant arch (was fly_ant)
monster/insect/ant/fly_ant.arc
SilverNexus 2014-05-06

2014-04-20	Kevin Zheng
	* spell/Ability/abil_burning_hands.arc: Rename to "breath flame".
	* spell/Ability/ability_dragonbreath.arc: Rename to "breath fire".

==============================================================================
Changes for 1.71.0
==============================================================================
Change Wraith to wraith in the Player archetype, so it shows up consistently
in the character creation dialoge.
player/race/wraithp.arc
RJT 2014-02-19

Cleaned up stray pixels in wall borders to make them look smoother.
construct/town/t_house2.base.x11.png
RJT 2014-02-19

Commented out the x and y default attributes on map arch.
They were being added to the x and y values when the arch was placed
on a map and can cause segfaults by placing the map arch off the map.
system/map.arc
SilverNexus 2013-12-03

Pixel cleanup on the map arch face.
system/map.base.111.png
SilverNexus 2013-12-03

Ripened and shaded pear, making it follow perspective guidlines.
Moved old image to classic imageset.
food/pear.base.111.png
food/pear.clsc.111.png
SilverNexus 2013-12-03

Added back facing for beholder. Added placeholder images
to classic imageset. Changed default facing to 151.
monster/beholder/beholder.base.111.png
monster/beholder/beholder.clsc.111.png
monster/beholder/beholder.base.112.png
monster/beholder/beholder.clsc.112.png
monster/beholder/beholder.base.113.png
monster/beholder/beholder.clsc.113.png
monster/beholder/beholder.base.114.png
monster/beholder/beholder.clsc.114.png
monster/beholder/beholder.base.151.png
monster/beholder/beholder.clsc.151.png
monster/beholder/beholder.base.152.png